# fct

./: README.md  bun.lockb  package.json
.github/workflows/: deploy-website.yml
docs/: README.md  astro.config.mjs  bun.lockb  package.json
docs/src/content/docs/: index.mdx
docs/src/pages/: privacy-policy.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/: theme-switch.tsx
