[package]
name = "fct"
version = "0.1.0"
description = "Generate a new file from a different supported file format."
authors = ["Mueez Khan"]
license = ""
repository = "https://github.com/rzmk/fct"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fct_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-dialog = "2.0.0-beta"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.25.1"
anyhow-tauri = { version = "1.0.0", features = ["show_errs_in_release"] }
anyhow = "1.0.86"
showfile = "0.1.1"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
